--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# IC Light Professional - Repository Files
+
 # Python
 __pycache__/
 *.py[cod]
@@ -16,65 +18,26 @@ parts/
 sdist/
 var/
 wheels/
+pip-wheel-metadata/
 share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
 MANIFEST
 
-# PyInstaller
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
+# PyTorch & ML Models
+*.pth
+*.safetensors
+models/
+cache/
+checkpoints/
+*.ckpt
+*.bin
 
 # Jupyter Notebook
 .ipynb_checkpoints
 
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-.python-version
-
-# pipenv
-Pipfile.lock
-
-# poetry
-poetry.lock
-
-# pdm
-.pdm.toml
-
-# PEP 582
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
+# Environment variables
 .env
 .venv
 env/
@@ -83,47 +46,52 @@ ENV/
 env.bak/
 venv.bak/
 
-# Spyder project settings
-.spyderproject
-.spyproject
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 
-# Rope project settings
-.ropeproject
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
-cython_debug/
-
-# IC Light specific
-models/
-*.safetensors
-*.ckpt
-*.bin
-cache/
-outputs/
-temp/
+# Logs
 logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Gradio
+# Temporary files
+temp/
+tmp/
+outputs/
+*.tmp
+*.temp
+
+# Google Colab
+.config/
+
+# Hugging Face
+.cache/
+transformers_cache/
+huggingface_cache/
+
+# Large files (use Git LFS if needed)
+*.mp4
+*.avi
+*.mov
+*.zip
+*.tar.gz
+*.rar
+
+# Gradio temp files
 gradio_cached_examples/
 flagged/
-
-# NVIDIA
-.nv/
-
-# HuggingFace
-.cache/
-wandb/
